making a clean workspace...

--- a/preamble.sty
+++ b/preamble.sty
@@ -162,7 +162,7 @@
 \newcommand{\type}[2]{\operatorname{A}(#1,#2)}
 
 % set of periodic characteristic matrices.
-\newcommand{\matrices}{{\Lambda_1}}
+\newcommand{\matrices}[1][]{\Lambda_1^{#1}}
 
 % row and column sums of characteristic matrix.
 \newcommand{\ro}[1]{\operatorname{ro}(#1)}
